# orbit-compiler

./: .gitignore  CMakeLists.txt  README.md  codeStyle.md
cmake/: clang-format.cmake
include/CallGraph/: CallGraph.h
include/DefUse/: DefUse.h  DefUsePass.h
include/Instrument/: AllocInstrumenter.h  InstrumentAllocPass.h
include/Matcher/: Matcher.h
include/ObiWanAnalysis/: ObiWanAnalysis.h
include/UseDef/: UseDef.h
include/Utils/: LLVM.h  Path.h  String.h
lib/: CMakeLists.txt
lib/ArgumentCounter/: ArgumentCounter.cpp
lib/CallGraph/: CallGraph.cpp
lib/DefUse/: DefUse.cpp  DefUsePass.cpp
lib/Instrument/: AllocInstrumenter.cpp  InstrumentAllocPass.cpp
lib/ObAnalysis/: ObAnalysis.cpp
lib/ObiWanAnalysis/: ObiWanAnalysis.cpp  ObiWanAnalysisPass.cpp
lib/StaticCallCounter/: StaticCallCounter.cpp
lib/UseDef/: UseDef.cpp
lib/Utils/: LLVM.cpp  Path.cpp  String.cpp
runtime/: CMakeLists.txt  gobj_tracker.c  gobj_tracker.h
scripts/: instrument-compile.sh
test/: .gitignore  Makefile  alloc  alloc.c  deadlock-test-1.cpp  deadlock-test-1.h  deadlock-test-2.cpp  deadlock-test-2.h  deadlock-test-3.cpp  field-sensitive.c  global.c  linked.c  loop1.c  modify.c  simple.c  vector.cpp
tools/: CMakeLists.txt
tools/extractor/: main.cpp
tools/instrumentor/: main.cpp
